# cleancut

./: .gitignore  README.md  osv-scanner.toml  pyproject.toml
.github/workflows/: ci.yml  socket-security.yml
cleancut/: __init__.py  __main__.py  audio_events.py  cache.py  classify_dialogue.py  classify_visual.py  cli.py  config.py  constants.py  corroboration.py  density.py  editor.py  editor_ranges.py  edl.py  edl_ops.py  llm_utils.py  pipeline.py  probe.py  report.py  scenes.py  subtitles.py  transcribe.py  visual.py
cleancut/data/: replacements.json  wordlists.json
tests/: conftest.py  test_audio_events.py  test_cache.py  test_caching_efficiency.py  test_classify_dialogue.py  test_classify_helpers.py  test_classify_visual.py  test_cli_commands.py  test_cli_smoke.py  test_config.py  test_context_gating.py  test_corroboration.py  test_density.py  test_density_source_filter.py  test_detection_safety.py  test_editor_commands.py  test_editor_extra.py  test_editor_math.py  test_edl.py  test_edl_extra.py  test_edl_ops.py  test_llm_utils.py  test_pipeline_integration.py  test_pipeline_unit.py  test_probe.py  test_refactor_batch.py  test_report.py  test_scenes.py  test_subtitles.py  test_subtitles_extra.py  test_transcribe.py  test_ux_fixes.py  test_visual.py
tests/fixtures/: sample.srt
